--- a/GamingPlatform/appsettings.json
+++ b/GamingPlatform/appsettings.json
@@ -9,8 +9,8 @@
 
 
   "ConnectionStrings": {
-    "GamingPlatformContext": "Server=.\\sqlexpress;Database=GamingPlatformContext-575b8f3c-7848-41b2-afa0-664ca88a6755;Trusted_Connection=True;MultipleActiveResultSets=true;integrated security=True;TrustServerCertificate=True"
-    //"GamingPlatformContext": "Server=localhost,1434;Database=GamingPlatform;User Id=SA;Password=TestProjetDotNet2025@;TrustServerCertificate=True;"
+    "GamingPlatformContext": "Server=localhost\\SQLEXPRESS01;Database=GamingPlatformDb;Trusted_Connection=True;TrustServerCertificate=True;"
+
   }
 
 
