--- a/GamingPlatform/appsettings.json
+++ b/GamingPlatform/appsettings.json
@@ -10,9 +10,9 @@
 
 
   "ConnectionStrings": {
-    //"GamingPlatformContext": "Server=.\\sqlexpress;Database=GamingPlatformContext-575b8f3c-7848-41b2-afa0-664ca88a6755;Trusted_Connection=True;MultipleActiveResultSets=true;integrated security=True;TrustServerCertificate=True"
+    "GamingPlatformContext": "Server=.\\sqlexpress;Database=GamingPlatformContext-575b8f3c-7848-41b2-afa0-664ca88a6755;Trusted_Connection=True;MultipleActiveResultSets=true;integrated security=True;TrustServerCertificate=True"
 
-    "GamingPlatformContext": "Server=localhost,1434;Database=GamingPlatform;User Id=SA;Password=TestProjetDotNet2025@;TrustServerCertificate=True;"
+    //"GamingPlatformContext": "Server=localhost,1434;Database=GamingPlatform;User Id=SA;Password=TestProjetDotNet2025@;TrustServerCertificate=True;"
 
     //"GamingPlatformContext": "Server=.;Database=GamingPlatformContext;User Id=sa;Password=Abbakabir1;MultipleActiveResultSets=true;TrustServerCertificate=True;"
     //"GamingPlatformContext": "Server=localhost\\SQLEXPRESS01;Database=GamingPlatformDb;Trusted_Connection=True;TrustServerCertificate=True;"
